kustomize/apps/minio/minio-ha/middlewares.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  labels:
    app.kubernetes.io/instance: traefik-traefik-v2
    app.kubernetes.io/name: traefik
  name: add-host-header
  namespace: minio-ha
spec:
  headers:
    customRequestHeaders:
      Host: "minio.minio-ha.svc"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  labels:
    app.kubernetes.io/instance: traefik-traefik-v2
    app.kubernetes.io/name: traefik
  name: access-control-expose-headers
  namespace: minio-ha
spec:
  headers:
    accessControlExposeHeaders:
    - '*'
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  labels:
    app.kubernetes.io/instance: traefik-traefik-v2
    app.kubernetes.io/name: traefik
  name: strip-prefix-s3
  namespace: vms
spec:
  stripPrefix:
    prefixes:
      - /s3
    forceSlash: true
